# robust-vision-language-navigation

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CONFIG.md  Makefile  README.md  TODO.md  approach_2_examples.json  experiment-plan.md  experimental_design.txt  pyproject.toml  real_boieng_mininav_interface.py  rvln-server_env.yml  rvln-sim_env.yml  todo-consolidate.md  todo-robust-post-hoc-checker.md
ai_framework/: source_env.yml
results/: README.md  analysis_output.json
scripts/: aggregate_results.py  analyze_annotations.py  analyze_constraint_adherence.py  analyze_frames.py  benchmark_sim_loop.py  build_replay_video.py  goal_adherence_approach_1.py  goal_adherence_approach_2.py  goal_adherence_utils.py  hardware_camera_debug.py  playback.py  playback_fpv.py  probe_cameras.py  run_all_conditions.py  run_condition1_naive.py  run_condition2_llm_planner.py  run_condition3_open_loop.py  run_condition4_single_frame.py  run_condition5_grid_only.py  run_condition6_text_only.py  run_eval.py  run_goal_adherence.py  run_gpt_hardware.py  run_hardware.py  run_hardware_gpt.py  run_hardware_openvla.py  run_integration.py  run_ltl.py  run_ltl_planner.py  run_old_original_eval.py  run_openvla_ltl.py  run_openvla_repl.py  run_repl.py  run_sim_controller.py  run_simulator.py  run_system_integration.py  run_uav_flow_eval.py  scout_locations.py  sim_common.py  start_mock_hardware.py  (+11 more)
tasks/: location_notes.txt  uav_flow_instructions
tests/: conftest.py  test_condition6_monitor.py  test_condition_ablations.py  test_dashboard.py  test_dashboard_ordering.py  test_parsing.py  (+13 more)
(+326 files in other folders)
